feat: change password for user
